alert position changed to fixed and z-index to 9999

--- a/src/style.css
+++ b/src/style.css
@@ -97,7 +97,7 @@ h6 {
 
 /* Alert */
 .alert {
-  position: absolute;
+  position: fixed;
   max-width: 320px;
   width: 400px;
   height: 40px;
@@ -110,6 +110,7 @@ h6 {
   border-radius: 5px;
   border: 1px solid var(--success-border);
   border-left: 3px solid var(--success);
+  z-index: 9999;
 }
 
 .check-icon {
@@ -375,8 +376,6 @@ h6 {
   .colors {
     grid-template-columns: repeat(10, 1fr);
   }
-
-  
 }
 
 @media only screen and (max-width: 1440px) and (min-width: 300px) {
